--- a/trainingplans.html
+++ b/trainingplans.html
@@ -195,7 +195,7 @@
             </div>
         </div>
     </div><!--col-->
-    <p class="d-flex justify-content-center" style="font-family: '1942'; font-size: 25px; ">Each training plan offered
+    <p class="d-flex justify-content-center" style=" margin-left: 10%;margin-right: 10%; font-family: '1942'; font-size: 25px; ">Each training plan offered
         by Zombiegeddon Academy caters to different aspects of survival, defense, medical care, leadership, and
         community-building, ensuring a comprehensive preparation for a fictional zombie apocalypse.</p>
     <br>
